# CCM

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/memory/: MEMORY.md  base-ui-nested-button-fix.md
docs/: requirements.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  editor.rs  git_import.rs  memory.rs  mod.rs  skills.rs  sources.rs  translation.rs
src-tauri/src/core/: mod.rs  types.rs
src-tauri/src/core/config/: migration.rs  mod.rs
src-tauri/src/core/gitops/: mod.rs  remote.rs
src-tauri/src/core/memory/: graph.rs  mod.rs  parser.rs
src-tauri/src/core/skill/: mod.rs  parser.rs  scanner.rs  template.rs  translation.rs
src-tauri/src/core/symlink/: mod.rs  windows.rs
src/components/: MessageToast.tsx  ThemeProvider.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/hooks/: useMessage.ts
src/routes/: Agents.tsx  Memory.tsx  MemoryDetail.tsx  Rules.tsx  Settings.tsx  SkillDetail.tsx  SkillEditor.tsx  SkillImport.tsx  SkillNew.tsx  Skills.tsx  SourceDetail.tsx  Sources.tsx  index.tsx
src/stores/: useConfigStore.ts  useMemoryStore.ts  useMessageStore.ts  useSkillsStore.ts  useSourcesStore.ts
src/types/: index.ts
