[package]
name = "ccm"
version = "0.1.0"
description = "Claude Code Manager - Manage SKILLs, Memory, AGENTS, and RULES"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ccm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

# Core dependencies
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
trash = "5"
